<resources>
    <string name="app_name">MobileBankingApplication</string>

    <!-- Login Activity -->
    <string name="etUserNameLogin">Username</string>
    <string name="etPasswordLogin">Password</string>
    <string name="btnSignInLogin">Sign In</string>
    <string name="error_username_or_password_incorrect">The username or password is invalid!</string>
    <string name="error_username_or_password_empty">The username or password is empty!</string>

    <!-- Home page Activity -->
    <string name="baseline_home_24">Home</string>
    <string name="baseline_reports_24">Reports</string>
    <string name="baseline_transactions_24">Transactions</string>
    <string name="baseline_transfers_24">Transfers</string>

    <!-- Transfers Fragment -->
    <string name="tvMakeATransfer">MAKE A TRANSFER</string>
    <string name="etAmountTransfersFragment">Amount</string>
    <string name="tvIsInvoice">Is it an invoice?</string>
    <string name="etPayeeTransfersFragment">Payee</string>
    <string name="etIBANTransfersFragment">IBAN</string>
    <string name="etDescriptionTransfersFragment">Description</string>
    <string name="btnSendTransfersFragment">Send</string>
    <string name="INSUFFICIENT_BALANCE">Insufficient balance!</string>

    <!-- Home Fragment -->
    <string name="tvAppName">ZoroPay</string>
    <string name="tvFiller1"></string>
    <string name="tvfiller2"></string>
    <string name="tvCardNumber">2485 8742 9748 4543</string>
    <string name="tvUserNameHomeFragment">Popa Adrian Bogdan</string>
    <string name="tvCardHomeFragment">Card number</string>
    <string name="tvNameHomeFragment">Name</string>
    <string name="tvValidThruHomeFragment">Valid Thru</string>
    <string name="tvValidThruDateHomeFragment">09/25</string>
    <string name="tvCopyHomeFragment">Copy</string>
    <string name="tvBalanceHomeFragment">Your Balance:</string>
    <string name="tvBalanceValueHomeFragment">45,754.3</string>
    <string name="tvDepositsHomeFragment">Deposits</string>
    <string name="tvRON">RON</string>
    <string name="imageViewIBAN">IBAN:</string>
    <string name="imageViewName">Name:</string>

    <!-- AddDeposit Fragment -->
    <string name="tvOpenNewDepositAddDepositFragment">OPEN NEW DEPOSIT</string>
    <string name="etDepositNameAddDepositFragment">Deposit name</string>
    <string name="etDepositAmountAddDepositFragment">Deposit amount</string>
    <string name="tvInterestRateAddDepositFragment">Interest rate:</string>
    <string name="tvInterestRateValueAddDepositFragment">value</string>
    <string name="tvTimeLeftAddDepositFragment">Time left:</string>
    <string name="tvTimeLeftValueAddDepositFragment">value</string>
    <string name="btnCloseAddDepositFragment">Close</string>
    <string name="btnOpenDepositAddDepositFragment">Open deposit</string>
    <string name="tvPeriodAddDepositFragment">Period</string>

    <string name="oneMonth">1 month</string>
    <string name="oneMonthValue">0.04</string>
    <string name="twoMonth">2 months</string>
    <string name="twoMonthValue">0.045</string>
    <string name="threeMonth">3 months</string>
    <string name="threeMonthValue">0.05</string>
    <string name="sixMonth">6 months</string>
    <string name="sixMonthValue">0.055</string>
    <string name="oneYear">12 months</string>
    <string name="oneYearValue">0.08</string>
    <string name="twoYear">24 months</string>
    <string name="twoYearValue">0.09</string>

    <!-- row_deposit_design -->
    <string name="tvInterestRate">Interest rate:</string>
    <string name="tvTimeLeft">Time left:</string>

    <string-array name="array_add_deposits_period">
        <item>1 month</item>
        <item>2 months</item>
        <item>3 months</item>
        <item>6 months</item>
        <item>12 months</item>
        <item>24 months</item>
    </string-array>

    <!-- EditDepositFragment -->
    <string name="tvEditDepositEditDepositFragment">Edit your deposit</string>
    <string name="btnCancelEditDepositFragment">Cancel</string>
    <string name="btnEditEditDepositFragment">Edit</string>
    <string name="btnDeleteDepositEditDepositFragment">Delete</string>

    <!-- PopUpDeletionFragment -->
    <string name="tvPopUpDeletionFragment1">Are you sure you want</string>
    <string name="tvPopUpDeletionFragment2">to delete the deposit </string>
    <string name="tvPopUpDeletionFragment3">with the name: </string>
    <string name="btnYes">Yes</string>
    <string name="btnNo">No</string>

    <!-- Transactions Fragment -->
    <string name="searchViewTransactions">Transaction name</string>
    <string name="btnAllTransactions">All</string>
    <string name="btnTransfersOnly">Transfers</string>
    <string name="btnExpenses">Expenses</string>
    <string name="btnIncomes">Incomes</string>
    <string name="btnDate">Date</string>
    <string name="btnSort">Sort</string>
    <string name="btnFilter">Filter</string>
    <string name="btnAccountStatement">Account Statement</string>
    <string name="btnSortAscending">Ascending</string>
    <string name="btnSortDescending">Descending</string>
    <string name="btnFilterDynamic">Filter</string>
    <string name="btnHide">Hide</string>
    <string name="btnSortDynamic">Sort</string>

    <!-- Reports Fragment -->
    <string name="btnGeneralPrediction">General</string>
    <string name="btnMonthlyPrediction">Monthly</string>
    <string name="tvPieChart">Expenses filtered by type</string>
    <string name="btnPredictExpenses">PREDICT</string>
    <string name="tvPredictExplanation">Predict the future expenses</string>


    <!-- Pin Fragment -->
    <string name="tvPinInfo">Please enter your password</string>
    <string name="btnConfirmPasswordForPin">Confirm</string>
    <string name="tvPinValue">***</string>
    <string name="tvPinInfo2">Your Pin:</string>

    <!-- AccountStatement Fragment -->
    <string name="btnFrom">From</string>
    <string name="btnTo">To</string>
    <string name="btnCancelAccountStatement">Cancel</string>
    <string name="btnConfirmAccountStatement">Confirm</string>
    <string name="tvAccStmtTtitle">Account Statement</string>
    <string name="tvAccStmtInfo">Select the Start Date and End Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>