<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.EditDepositFragment">


    <TextView
        android:id="@+id/tvEditDepositEditDepositFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="181dp"
        android:text="@string/tvEditDepositEditDepositFragment"
        android:textColor="@color/light_navy"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDepositNameEditDepositFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditDepositEditDepositFragment">

        <EditText
            android:id="@+id/etDepositNameEditDepositFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/etDepositNameAddDepositFragment" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDepositAmountEditDepositFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilDepositNameEditDepositFragment">

        <EditText
            android:id="@+id/etDepositAmountEditDepositFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/etDepositAmountAddDepositFragment"
            android:inputType="numberDecimal"
            android:enabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerDepositPeriodEditDepositFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPeriodEditDepositFragment"
        android:enabled="false"
        android:clickable="false"
        android:focusable="false" />

    <TextView
        android:id="@+id/tvInterestRateEditDepositFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/tvInterestRateAddDepositFragment"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDepositPeriodEditDepositFragment" />

    <TextView
        android:id="@+id/tvInterestRateValueEditDepositFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/tvInterestRateValueAddDepositFragment"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tvInterestRateEditDepositFragment"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDepositPeriodEditDepositFragment" />

    <TextView
        android:id="@+id/tvTimeLeftEditDepositFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/tvTimeLeftAddDepositFragment"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInterestRateEditDepositFragment" />

    <TextView
        android:id="@+id/tvTimeLeftValueEditDepositFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/tvTimeLeftValueAddDepositFragment"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tvTimeLeftEditDepositFragment"
        app:layout_constraintTop_toBottomOf="@+id/tvInterestRateValueEditDepositFragment" />


    <Button
        android:id="@+id/btnCancelEditDepositFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/btnCancelEditDepositFragment"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeLeftEditDepositFragment" />

    <Button
        android:id="@+id/btnEditDepositEditDepositFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/btnEditEditDepositFragment"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btnDeleteDepositEditDepositFragment"
        app:layout_constraintStart_toEndOf="@+id/btnCancelEditDepositFragment"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeLeftEditDepositFragment" />

    <Button
        android:id="@+id/btnDeleteDepositEditDepositFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/red"
        android:text="@string/btnDeleteDepositEditDepositFragment"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeLeftEditDepositFragment" />

    <TextView
        android:id="@+id/tvPeriodEditDepositFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/tvPeriodAddDepositFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilDepositAmountEditDepositFragment" />
</androidx.constraintlayout.widget.ConstraintLayout>